--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,9 @@
 }
 
 .home,
-.services,
-.products,
+.about,
+.skills,
+.projects,
 .sign-up {
     display: flex;
     height: 90vh;
@@ -17,8 +18,8 @@
     font-size: 3rem;
 }
 
-.services {
-    background-image: url('../src/images/img-2.jpg');
+.about {
+    background-image: url(/src/images/img-2.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -26,17 +27,17 @@
     font-size: 100px;
 }
 
-.products {
-    background-image: url('../src/images/img-1.jpg');
+.skills {
+    background-image: url(/src/images/img-1.jpg);
     background-position: center;
-    background-size: fill;
+    background-size: cover;
     background-repeat: no-repeat;
     color: #fff;
     font-size: 100px;
 }
 
 .sign-up {
-    background-image: url('../src/images/img-8.jpg');
+    background-image: url(/src/images/img-8.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
