--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -67,7 +67,7 @@
 }
 
 .nav-links:hover {
-    border-bottom: 4px solid #fff;
+    border-bottom: 4px solid #E04F39;
     transition: all 0.2s ease-out;
 }
 
